<resources>
    <string name="app_name">ProTeam</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="symptoms_of_coronavirus">Symptoms of Coronavirus</string>
    <string name="how_it_prevent">How it Prevent</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="title_activity_verify_otp">VerifyOtpActivity</string>
    <string name="health_details">Health Details</string>
    <string name="raise_request">Raise Request</string>
    <string name="raise_alert">Raise Alert</string>
    <string name="update_location">Update Location</string>
    <string name="upload_selfie">Upload Selfie</string>
    <string name="reports">Reports</string>
    <string name="settings">settings</string>
    <string name="what_is_your_mobile_number">What is your mobile number ?</string>

</resources>
