<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivityActivity">
    <LinearLayout
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="200dp">
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:src="@drawable/ic_mobile_services"
    />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/what_is_your_mobile_number"
        />
<LinearLayout
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/editText"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:ems="10"
        android:text="@string/_91"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:drawable/editbox_background_normal"
       />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:padding="8dp"
        android:background="@android:drawable/editbox_background_normal"
        />
</LinearLayout>
    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_margin="8dp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:clickable="true"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />

</LinearLayout>
</ScrollView>